--- a/src/app/layout/chat/components/chat-message-input/chat-message-input.component.scss
+++ b/src/app/layout/chat/components/chat-message-input/chat-message-input.component.scss
@@ -1,9 +1,12 @@
 @use 'src/styles/tokens' as tokens;
 
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   flex-shrink: 0;
+  flex-grow: 0;
   width: 100%;
+  min-height: fit-content;
 }
 
 .chat-message-input {
