--- a/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -13,7 +13,7 @@
             <div *ngIf="showForgotPassScreen" class="flex flex-col justify-center items-center ">
                 <div class="authorize-details-inner max-w-[552px] xl:w-3/5 sm:w-4/5 w-11/12	">
                     <div class="3xl:mb-[41%] xl:mb-[25%] mb-[10%]">
-                        <!-- <img src="../../../../assets/img/logo_home.png" class="max-w-full h-auto" /> -->
+                        <img src="../../../../assets/img/planora-icon.png" class="max-w-full h-auto" />
                     </div>
 
                     <h1 class="font-muli heading-1 text-black-primary font-40">
