--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -13,7 +13,7 @@
       <div class="flex flex-col justify-center items-center ">
         <div class="authorize-details-inner sm:w-4/5 w-11/12	max-w-[552px]">
           <div class="lg:mb-[16.4%] mb-[10%]">
-            <!-- <img src="../../../../assets/img/logo_home.png" class="max-w-full h-auto" /> -->
+            <img src="../../../../assets/img/planora-icon.png" class="max-w-full h-auto" />
           </div>
 
           <!-- <img src="../../../assets/img/WelcomeLogin.svg" class="mb-3" /> -->
